AvsD og RealtimeVSNoneRealtime og Krav og GUI

--- a/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
+++ b/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
@@ -1,6 +1,5 @@
-\chapter{Test of DALI Zensor 5}
- A basic understanding of the loudspeaker topology has now been given it is deemed relevant to observe an actual loudspeakers performance to see if any of the mentioned situations that create distortion arises when a loudspeaker is pushed to its limits and beyond. %This section will go through a test of a loudspeaker to investigate if any vibrations in the loudspeaker affect the distortion of the loudspeaker. 
- The loudspeaker which will be the basis for the test is the Zensor 5, shown on \autoref{fig:dali_zensor5}, produced by DALI. A passive loudspeaker has been choosen for the test because the amplifier in DALI's active loudspeakers are designed not to push the loudspeaker to its limits and beyond. %and to be able to test how the vibrations affect distortion, the loudspeaker must be tested to above its limits.
+\section{Test of DALI Zensor 5}
+In order to determine whether or not it is possible to use sensory equipment to measure any vibration from the loudspeaker system. It is desireable to check if the output of the sensors can be analyzed and a suitable action can be taken. The loudspeaker which will be the basis for the test is the Zensor 5, shown on \autoref{fig:dali_zensor5}, produced by DALI. A passive loudspeaker has been choosen for the test because the amplifier in DALI's active loudspeakers are designed not to push the loudspeaker to its limits and beyond. %and to be able to test how the vibrations affect distortion, the loudspeaker must be tested to above its limits.
 
 \begin{figure}[H]
 \centering
