--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
@@ -1,4 +1,4 @@
-\section{Processor Platform}
+\section{Platform requirements}
 The purpose of this section is to derive the requirements for the digital development platform. Most of the requirements derived in this section are provided by DALI thus the choice of platform will mostly be based on an analysis of which processor platform will be optimal in order to fulfil the requirements. The requirements for the processor platform have been derived in a mail correspondence with DALI.
 \todo[inline]{Reference til CD}
 %\subsection*{Demands for the platform}
