--- a/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
+++ b/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
@@ -1,13 +1,3 @@
-\section{Real-time Signal Processing System}
-
-It is important to clarify if the processing system is going to be designed as an analog or digital system. Both types have its own advantages and disadvantages and one of the purposes of this section is thus to determine which platform will suit the system most. A brief analysis on the advantages and disadvantages of both system are therefore provided. 
-
-Briefly, the main difference between an analog and digital system is that the analog system works in continuous-time while the digital system works in discrete-time. For a continuous-time system values of a continuous signal, at any given time, is defined. For a discrete-time system, values of a signal are only defined at specific points in time with a fixed resolution. The time difference between each points is defined through defined sampling period $T_s$ and the resolution of each point is defined by the resolution of the Analog-to-Digital Converter (ADC). By using a digital system, some information of the signal is necessarily lost, since there will be points in time where the signal is not defined.
-
-For an analog system, components such as resistors, capacitors, inductors, transistors and so on, are usually used. A digital system will typically consist of an ADC to discretize the analog signal, a processor to process the signal, and a Digital-to-Analog Converter (DAC) to convert the signal back to an analog signal. The advantage of designing an analog system is that ideally no information is lost. This conclusion is however derived with the assumption that analog components are ideal since distortion will arise as soon as non-ideal components are used. The problem with ideal components is not a problem for a digital system, since no further distortion will be applied to the signal as soon as the signal is discretized.
-
-As the system to be developed, most likely will rely on signal processing, the great disadvantages of an analog system is the constraints and flexibility to apply signal processing compared to a digital system. Some applications such as the Fourier Transformation is very hard if not impossible to realize in an analog system while realizable in a digital system through algorithms. Also, if the system is large, an analog system might turn out to be very complex, and use more components which results in more distortion. As the system to be developed is relying on signal processing the platform is chosen to be digital.
-
 \section{Feedback versus Feedforward System} \label{sec:feedback}
 
 At this point it is yet to be determined if the system will be based on a feedback or a feedforward system. The choices are to design a feedback system that will decide what to do, based on real-time measurements from a sensor i.e. accelerometer, or a feedforward system that will analyse an input signal and then decide what to do. Previous tests have shown that it is possible to use an accelerometer to estimate the performance of the system by looking at the harmonic distortions. A big issue is to analyse harmonic distortions when music is played back, as estimating harmonic distortions introduced in a system, are only well-defined for periodic sinusoids. The tests of the loudspeaker also showed that the frequency response of vibration on the driver and cabinet hardly changes when exposed for loud playback, thus it will be hard to derived anything alone from the frequency response of the vibrations. It can therefore be concluded that developing a system based on measurements from a accelerometer might turn out to be too complex to be realized in time due to time constraints. The system to be designed will therefore be based on a feedforward system. The concept of a feedback system which fulfil the problem statement is shown in \autoref{fig:Concept}.
@@ -24,43 +14,51 @@ At this point it is yet to be determined if the system will be based on a feedba
 The design concept consist of a signal processing block, which will be analysed to understand which solution is best for the problem stated, a signal analysis block which will not be analysed further in this chapter, a user interface which will be analysed to determine how the user interface should be designed and lastly the processor block which will be analysed to determine which type of processor that should be used. 
 
 
-\subsection{Distortion from vibration and impulses}\label{subsec:impulses}
-
-A common problem when designing loudspeakers are the vibrations from the enclosure. If the vibrations are strong, they will become audible and distort the overall sound. The sound radiation from the enclosure will become greater when the \gls{SPL} from the speaker increase. This problem is solved with different techniques but yield more or less the same outcome, which is stiffening of the enclosure. Some of the techniques for removing vibrations from the enclosure could be:
-\begin{itemize}
-\item Mechanical decoupling of the drivers from the enclosure.
-\item Denser or heavier construction material with a high natural frequency, making it harder for the enclosure to start vibrating.
-\item Dampening material or complex structural design inside the cabinet to disperse the sound.
-\end{itemize}
-\todo[inline]{Skal nok lige skaffe nogle kilder på de udtagelser}
-
-Another possibility is to use the vibration measurement as an indicator to tell the current performance of the loudspeaker. Since the loudspeaker will vibrate more at higher volumes. 
-
-
-Looking further into the woofer itself, it shows in \autoref{fig:SpeakerModelStress} that parts in the woofer also creates unwanted vibrations. The purpose of the woofer is to reproduce the electrical signal as an acoustical signal. This is done by using a diaphragm which is suspended in a very light and easy to move material. An Induction in the coil is created in a permanent magnet creating a a electro magnetic force resulting in the diaphragm moving. The goal will always be to loose as little as possible energy, giving the most perfect output. The woofer simply needs to be as powerful, light, stiff and efficient as possible.
-
-\begin{figure}[H]
-\centering
-\begin{subfigure}[t]{0.47\textwidth}
-\includegraphics[width=\linewidth]{SpeakerGOOD}
-	\caption{Regular speaker driver showing surround, diaphragm and the magnet.}
-	\label{fig:regularspeaker}
-\end{subfigure}
-\hspace{6mm} 
-\begin{subfigure}[t]{0.47\textwidth}
-\includegraphics[width=\linewidth]{SpeakerBAD}
-	\caption{Regular speaker driver with red markings showing stress areas}
-	\label{fig:badspeaker}
-\end{subfigure}
-\caption{A Speaker driver, where \ref{fig:badspeaker} shows the stress points outlined with red.}
-\label{fig:SpeakerModelStress}
-\end{figure}
-%When this signal has a large amplitude, read overload, the diaphragm reaches physical capacity. 
-In \autoref{fig:badspeaker} it shows that when a diaphragm is pushed to its maximum capacity the surround will affect the diaphragm causing unwanted distortion. This will be one of the major problems if the diaphragm is not sufficiently stiff to withstand the high \gls{SPL} and not twist during playback. 
-
-
+%\subsection{Distortion from vibration and impulses}\label{subsec:impulses}
+%
+%A common problem when designing loudspeakers are the vibrations from the enclosure. If the vibrations are strong, they will become audible and distort the overall sound. The sound radiation from the enclosure will become greater when the \gls{SPL} from the speaker increase. This problem is solved with different techniques but yield more or less the same outcome, which is stiffening of the enclosure. Some of the techniques for removing vibrations from the enclosure could be:
+%\begin{itemize}
+%\item Mechanical decoupling of the drivers from the enclosure.
+%\item Denser or heavier construction material with a high natural frequency, making it harder for the enclosure to start vibrating.
+%\item Dampening material or complex structural design inside the cabinet to disperse the sound.
+%\end{itemize}
+%\todo[inline]{Skal nok lige skaffe nogle kilder på de udtagelser}
+%
+%Another possibility is to use the vibration measurement as an indicator to tell the current performance of the loudspeaker. Since the loudspeaker will vibrate more at higher volumes. 
+%
+%
+%Looking further into the woofer itself, it shows in \autoref{fig:SpeakerModelStress} that parts in the woofer also creates unwanted vibrations. The purpose of the woofer is to reproduce the electrical signal as an acoustical signal. This is done by using a diaphragm which is suspended in a very light and easy to move material. An Induction in the coil is created in a permanent magnet creating a a electro magnetic force resulting in the diaphragm moving. The goal will always be to loose as little as possible energy, giving the most perfect output. The woofer simply needs to be as powerful, light, stiff and efficient as possible.
+%
+%\begin{figure}[H]
+%\centering
+%\begin{subfigure}[t]{0.47\textwidth}
+%\includegraphics[width=\linewidth]{SpeakerGOOD}
+%	\caption{Regular speaker driver showing surround, diaphragm and the magnet.}
+%	\label{fig:regularspeaker}
+%\end{subfigure}
+%\hspace{6mm} 
+%\begin{subfigure}[t]{0.47\textwidth}
+%\includegraphics[width=\linewidth]{SpeakerBAD}
+%	\caption{Regular speaker driver with red markings showing stress areas}
+%	\label{fig:badspeaker}
+%\end{subfigure}
+%\caption{A Speaker driver, where \ref{fig:badspeaker} shows the stress points outlined with red.}
+%\label{fig:SpeakerModelStress}
+%\end{figure}
+%%When this signal has a large amplitude, read overload, the diaphragm reaches physical capacity. 
+%In \autoref{fig:badspeaker} it shows that when a diaphragm is pushed to its maximum capacity the surround will affect the diaphragm causing unwanted distortion. This will be one of the major problems if the diaphragm is not sufficiently stiff to withstand the high \gls{SPL} and not twist during playback. 
 
 
+
+%\input{1Chapters/1Preanalysis/PartConclusionAmpSpeaker.tex}
+
+\input{1Chapters/1Preanalysis/Loudspeaker_test.tex}
+
+%\input{1Chapters/1Preanalysis/frequency_response.tex}
+
+%\input{1Chapters/1Preanalysis/harmonic_distortion.tex}
+
+\input{1Chapters/1Preanalysis/hit_detection.tex}
 
 
 
