--- a/Rapport/1Chapters/2Concept/multirate.tex
+++ b/Rapport/1Chapters/2Concept/multirate.tex
@@ -1,1 +1,12 @@
-\section{Multirate signal processing}
+\section{Multi-rate signal processing}
+
+A multi-rate processing system is a system that takes advantages of having multiple sample rates of the original signal. For instance a 48 kHz sample rate may be downsampled to 24 kHz. This also means that the highest frequency component that fulfils the Nyquist criterion is maximum 12 kHz. To avoid loss of data a highpass filter should be applied to the original signal such that the signal is split into two bands between 0 Hz to 24 kHz. The advantage of having a multi-rate system, is that the filter order for low-pass filter is decreased for a downsampled subsystem. By doing so, the amount of computation is thus also decreased.
+
+To downsample a signal, a anti-aliasing must first be applied. The purpose of the anti-aliasing filter is to filter higher frequencies away, as aliasing will arise because of the Nyquist criterion. If not, a 13 kHz signal will appear as a 1 kHz signal if downsampling is performed without an anti-aliasing filter. A system consisting of both an anti-aliasing filter and a downsampler is called decimator and the task is called decimation.
+
+To upsample to a higher sampling rate an interpolator is needed. Interpolation is basically the opposite of decimation. The interpolator consist of a upsampler followed by a anti-aliasing. If the interpolation factor is desired to be 2 then the upsampler will insert zeros in-between each samples. This afterwards filtered by a anti-aliasing filter to smooth the signal. 
+
+A multi-rate system is especially useful when implementing high order FIR-filters. The order of a FIR filter will be large if the impulse response of FIR filter is long. By downsampling the signal, a lower order FIR-filter is only needed to achieve an equivalent filter response.
+
+
+
