adding 300 Hz and below

--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -51,7 +51,7 @@ The analysis so far has mainly concerned distortion and non-linearities in an ac
 \item Coil hitting the back plate.
 \end{itemize}
 
-The system to be designed should therefore reduce the amount of distortion, and protect the active loudspeaker with main focus on each of parameters on the list. Following problem statement is thus formulated:
+The system to be designed should therefore reduce the amount of distortion in minimum the whole bass region (below 300 Hz), and protect the active loudspeaker with main focus on each of parameters on the list. Following problem statement is thus formulated:
 
 
 \begin{center}
