--- a/Rapport/1Chapters/2Concept/multiband.tex
+++ b/Rapport/1Chapters/2Concept/multiband.tex
@@ -1,1 +1,3 @@
-\section{Multiband compression}
+\section{Single-band vs multi-band system}
+This section will examine if the system should use multi-band or single-band. This examination will be done by performing a listening test, of both a single-band and a multi-band compressor, to conclude if a multi-band compressor sounds better than a single-band compressor. 
+
