--- a/Rapport/1Chapters/3SystemOverview/SystemOverviewMAIN.tex
+++ b/Rapport/1Chapters/3SystemOverview/SystemOverviewMAIN.tex
@@ -4,6 +4,6 @@
 
 \input{1Chapters/3SystemOverview/Interface.tex}
 
-\input{1Chapters/3SystemOverview/TotalOverview.tex}
+%\input{1Chapters/3SystemOverview/TotalOverview.tex}
 
 
