--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -94,8 +94,6 @@
 \part{Concept}
 \include{1Chapters/2Concept/TechnicalAnalysisMain}
 
-
-
 \include{1Chapters/2Requirements/RequirementsMAIN}
 
 \include{1Chapters/3SystemOverview/SystemOverviewMAIN}
@@ -105,9 +103,9 @@
 
 \include{1Chapters/Filters/FiltersMAIN}
 
-\include{1Chapters/Equalizer/EqualizerMAIN}
+%\include{1Chapters/Equalizer/EqualizerMAIN}
 
-\include{1Chapters/Limiter/LimiterMAIN}
+%\include{1Chapters/Limiter/LimiterMAIN}
 
 \include{1Chapters/Model/ModelMAIN}
 
