--- a/Rapport/figures/raw_driver19_window_zoom.tex
+++ b/Rapport/figures/raw_driver19_window_zoom.tex
@@ -6,6 +6,26 @@
 %
 \begin{tikzpicture}
 
+
+\begin{axis}[%
+width=2.3in,
+height=2in,
+at={(1.011in,0.642in)},
+scale only axis,
+xmin=28.9375,
+xmax=29.1875,
+xtick={28.95, 29, 29.05,  29.1, 29.15},
+xticklabels={84, 80, 76, 72, 68},
+xmajorgrids,
+ymin=-0.2,
+ymax=0.2,
+ymajorgrids,
+axis x line*=top,
+xlabel={Frequency [Hz]},
+axis background/.style={fill=white}
+]
+\end{axis}
+
 \begin{axis}[%
 width=2.3in,
 height=2in,
