--- a/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
+++ b/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
@@ -21,7 +21,7 @@ The loudspeaker is set to play a sinesweep from the crossover frequency of the s
 
 \subsubsection{Analysis of the DALI Zensor AX 5 measurements}
 
-In this section a brief review and conclusion of the analysis done in \autoref{app:journal_speaker_test} is presented. %The purpose of this analysis is to examine if it possible to tell the current performance of the loudspeaker from the accelerometer placed on the loudspeaker. 
+In this section a brief review and conclusion of the analysis done in \autoref{app:journal_speaker_test} is presented. 
 There are many different approaches in analysing the measured data, and the approach done in this project, will be analysing the frequency response of the loudspeaker vibration, harmonic distortion, and detection of the coil hitting the back plate of the driver. The structure of the following part of this section will be showing how the speaker reacts to the different levels of amplification and to expose if a pattern can be extracted.
 
 %\subsection*{Experiment analysis}
@@ -30,7 +30,7 @@ There are many different approaches in analysing the measured data, and the appr
 
 %\vspace{3mm}
 
-During the first measurements the loudspeaker acts linear with very little fluctuations. The frequency response keeps being steadily the same with an increase in amplitude which was expected. A tendency shows that the 3rd harmonic increases more rapidly than the 2nd harmonic, again as expected for the performance of a loudspeaker. When the speaker was pushed beyond the capabilities told by DALI an anomaly appears in the measurements. This is shown in \autoref{fig:raw_driver19_window_main}, where spikes in amplitude appear when playing very low frequency sound. 
+During the first accelerometer measurements the loudspeaker acts linear with very little fluctuations. The frequency response keeps being steadily the same with an increase in amplitude which was expected. A tendency shows that the 3rd harmonic increases more rapidly than the 2nd harmonic, again as expected for the performance of a loudspeaker. When the speaker was pushed beyond the capabilities told by DALI an anomaly appears in the measurements. This is shown in \autoref{fig:raw_driver19_window_main}, where spikes in amplitude appear when playing very low frequency sound. 
 
 \begin{figure}[H]
 \centering
