--- a/Rapport/1Chapters/1Preanalysis/hit_detection.tex
+++ b/Rapport/1Chapters/1Preanalysis/hit_detection.tex
@@ -1,4 +1,4 @@
-\section{Back Plate Hit Detection}\label{sec:hit_detect}
+\subsection{Back Plate Hit Detection}\label{sec:hit_detect}
 
 As previously stated, it is possible that the loudspeaker coil hits the back plate of the driver if the coil moves too far back. In the long run this will damage the loudspeaker, and should therefore be avoided. In this section an analysis on how to detect these hits, will be provided. 
 
