appendixer written for filter

--- a/Rapport/1Chapters/Filters/FiltersMAIN.tex
+++ b/Rapport/1Chapters/Filters/FiltersMAIN.tex
@@ -3,14 +3,9 @@
 \begin{itemize}
 \item Introduction (Done)
 \item Requirements
-\item Interface
-\item IIR vs FIR
 \item Explanation of the FIR design 
 \item Finished design 
-\item Simulation
-\item Implementation 
-\item (Appendix) FIR theory
-\item (Appendix) Matlab script
+\item Simulation 
 \end{itemize} 
 
 This chapter will describe how the filters in the system is designed, in more detail the chapter will examine the requirements, the interfacing, the design method, the design, the simulation, the implementaion and the test of the filters. Besides this chapter the appendix will contain detailed explanation of the theory of the FIR filter and the matlab script used to design the filters.       
@@ -21,6 +16,6 @@ This chapter will describe how the filters in the system is designed, in more de
 
 \input{1Chapters/Filters/Simulation.tex}
 
-\input{1Chapters/Filters/Implementation.tex}
+%\input{1Chapters/Filters/Implementation.tex}
 
-\input{1Chapters/Filters/Test.tex}
+%\input{1Chapters/Filters/Test.tex}
