--- a/Rapport/2Appendix/AppendixMAIN.tex
+++ b/Rapport/2Appendix/AppendixMAIN.tex
@@ -15,5 +15,9 @@
 \input{2Appendix/SoundPerception.tex}
 \input{2Appendix/Distortion.tex}
 %% Et afsnit %%
+\input{2Appendix/IEC6964}
 
 \input{2Appendix/FIRTheory}
+
+\input{2Appendix/FIRMatlab}
+
